// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RxInject is instantiable with Factory 1`] = `
<Inject>
  <NumberCompWrapper
    number={0}
  >
    <NumberComp
      number={0}
    >
      <span>
        0
      </span>
    </NumberComp>
  </NumberCompWrapper>
</Inject>
`

exports[`RxInject is instantiable with Factory and class component 1`] = `
<Inject>
  <NumberComp2
    number={0}
  >
    <span>
      0
    </span>
  </NumberComp2>
</Inject>
`

exports[`RxInject is instantiable with Observable 1`] = `
<Inject>
  <NumberCompWrapper
    number={2}
  >
    <NumberComp
      number={2}
    >
      <span>
        2
      </span>
    </NumberComp>
  </NumberCompWrapper>
</Inject>
`

exports[`RxInject is instantiable with Observable 2`] = `
<Inject>
  <NumberCompWrapper
    number={42}
  >
    <NumberComp
      number={42}
    >
      <span>
        42
      </span>
    </NumberComp>
  </NumberCompWrapper>
</Inject>
`

exports[`Wrapper should wrap around component 1`] = `
<helloWrapper>
  <hello>
    <span>
      hello
    </span>
  </hello>
</helloWrapper>
`
